tests/fuse/stdlib/full/json_test.fuse
// EXPECTED OUTPUT:
// === parse null ===
// isNull: true
// === parse bool ===
// isBool: true
// === parse number ===
// isNumber: true
// === parse string ===
// isString: true
// === parse array ===
// isArray: true
// === parse object ===
// isObject: true
// === stringify null ===
// null
// === stringify bool ===
// true
// === stringify number ===
// 42.0
// === stringify string ===
// "hello"
// === parse complex ===
// complex ok: true
// === parse error ===
// error: true
// === match extraction ===
// name: alice
// === done ===
// done

import stdlib.full.json

@entrypoint
fn main() {
  // parse null
  println("=== parse null ===")
  val nullResult = json.parse("null")
  match nullResult {
    Ok(v) => println(f"isNull: {v.isNull()}")
    Err(e) => println(f"error: {e.message}")
  }

  // parse bool
  println("=== parse bool ===")
  val boolResult = json.parse("true")
  match boolResult {
    Ok(v) => println(f"isBool: {v.isBool()}")
    Err(e) => println(f"error: {e.message}")
  }

  // parse number
  println("=== parse number ===")
  val numResult = json.parse("42")
  match numResult {
    Ok(v) => println(f"isNumber: {v.isNumber()}")
    Err(e) => println(f"error: {e.message}")
  }

  // parse string
  println("=== parse string ===")
  val strResult = json.parse("\"hello\"")
  match strResult {
    Ok(v) => println(f"isString: {v.isString()}")
    Err(e) => println(f"error: {e.message}")
  }

  // parse array
  println("=== parse array ===")
  val arrResult = json.parse("[1, 2, 3]")
  match arrResult {
    Ok(v) => println(f"isArray: {v.isArray()}")
    Err(e) => println(f"error: {e.message}")
  }

  // parse object
  println("=== parse object ===")
  val objResult = json.parse("{\"key\": \"value\"}")
  match objResult {
    Ok(v) => println(f"isObject: {v.isObject()}")
    Err(e) => println(f"error: {e.message}")
  }

  // stringify
  println("=== stringify null ===")
  println(json.stringify(JsonValue.Null))

  println("=== stringify bool ===")
  println(json.stringify(JsonValue.JBool(true)))

  println("=== stringify number ===")
  println(json.stringify(JsonValue.JNumber(42.0)))

  println("=== stringify string ===")
  println(json.stringify(JsonValue.JStr("hello")))

  // parse complex
  println("=== parse complex ===")
  val complex = json.parse("{\"name\": \"alice\", \"age\": 30}")
  match complex {
    Ok(v) => {
      val isObj = v.isObject()
      println(f"complex ok: {isObj}")
    }
    Err(e) => println(f"error: {e.message}")
  }

  // parse error
  println("=== parse error ===")
  val badResult = json.parse("{invalid}")
  match badResult {
    Ok(v) => println("error: false")
    Err(e) => println("error: true")
  }

  // match extraction — pattern match on enum variant
  println("=== match extraction ===")
  val strVal = json.parse("\"alice\"")
  match strVal {
    Ok(v) => match v {
      JsonValue.JStr(s) => println(f"name: {s}")
      _ => println("not a string")
    }
    Err(e) => println(f"error: {e.message}")
  }

  println("=== done ===")
  println("done")
}
